fixed overflowing long links

--- a/PhpbbInDotnet.Forum/wwwroot/css/Common.css
+++ b/PhpbbInDotnet.Forum/wwwroot/css/Common.css
@@ -55,6 +55,10 @@ h3 {
     margin-top: 0px !important;
 }
 
+a {
+    word-break: break-all;
+}
+
 .message {
     display: none;
     color: white;
